--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,20 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --text-color: var(--black, #000000);
+  --page-background-color: var(--white, #ffffff);
+  --page-main-font-family: "Inter", sans-serif;
+  --page-main-font-weight: 400;
+  --page-accent-font-family: "PressStart2P", fantasy;
+  --page-background-image:repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+
+  --like-main-body-color: none;
+  --like-contour-color: var(--text-color, #000000);
+  --like-sparks-color: #ff0000;
+
+  --headings-font-weight: 700;
+
+  --button-text-color: var(--page-background-color, #ffffff);
+}
