--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,117 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+/* Опишите в этом файле все keyframes для проекта и стили анимаций иконки Like.
+
+Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
+✦ theme-dark — класс тёмной темы
+✦ theme-light — класс светлой темы
+✦ like-icon — для svg-иконки анимированного сердца
+✦ card__like-button — для кнопки Like рядом с иконкой
+✦ like-icon — для кнопки, оборачивающей иконку
+✦ like-icon — для кнопки, оборачивающей иконку
+✦ card__icon-button — для кнопки, оборачивающей иконку
+✦ card__icon-button — для кнопки, оборачивающей иконку
+✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
+✦ button__text — для обозначения текстового элемента внутри кнопки
+
+Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
+*/
+/* Стили до анимаций */
+
+.like-icon .core {
+    fill: var(--page-background-color, #ffffff);
+    transition: fill 0.3s linear 0.03s;
+  }
+  
+  .like-icon .main-body {
+    fill: var(--page-background-color, #ffffff);
+    transition: fill 0.3s linear;
+  }
+  
+  .like-icon .contour {
+    fill: var(--like-contour-color, #000000);
+    transition: fill 0.1s linear;
+  }
+  
+  .like-icon .heart {
+    transform-origin: center;
+  }
+  
+  .like-icon .sparks {
+    opacity: 0;
+  }
+  
+  
+  .like-icon:hover .core {
+    fill: var(--like-contour-color, #000000);
+    transition: fill 0.3s linear;
+  }
+  
+  .like-icon:hover .main-body {
+    fill: var(--like-contour-color, #000000);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  
+  .like-icon:active .core {
+    fill: var(--like-sparks-color, #ff0000);
+    transition: fill 0.3s linear;
+  }
+  
+  .like-icon:active .main-body {
+    fill: var(--like-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  
+  .like-icon.is-liked .core {
+    fill: var(--like-sparks-color, #ff0000);
+    transition: fill 0.3s linear;
+  }
+  
+  .like-icon.is-liked .main-body {
+    fill: var(--like-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.05s;
+  }
+  
+  .like-icon.is-liked .contour {
+    fill: var(--like-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.06s;
+  }
+  
+  .like-icon.is-liked .heart {
+    animation: heart 0.3s ease-in 0.1s 1 alternate;
+  }
+  
+  .like-icon.is-liked .sparks {
+    animation: sparks 0.3s ease-in 0.3s 1 alternate;
+  }
+  
+  @keyframes heart {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.5);
+    }
+  }
+  
+  @keyframes sparks {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes arrow {
+    from {
+      transform: translate(0);
+    }
+    to {
+      transform: translate(4px);
+    }
+  }
