--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,7 +8,13 @@
   --page-main-font-family: "Inter", sans-serif;
   --page-main-font-weight: 400;
   --page-accent-font-family: "PressStart2P", fantasy;
-  --page-background-image:repeating-linear-gradient(90deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px), linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+  --page-background-image: repeating-linear-gradient(
+      90deg,
+      #d3d3d3 0 2px,
+      rgb(0 0 0 / 0) 2px 4px
+    ),
+    repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0 / 0) 2px 4px),
+    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
 
   --like-main-body-color: none;
   --like-contour-color: var(--text-color, #000000);
